Fixed format issue with the yaml files

--- a/_data/dependencies/federal/asc-csa.yaml
+++ b/_data/dependencies/federal/asc-csa.yaml
@@ -1,7 +1,7 @@
 ---
 adminCode: asc-csa
-releases:
-- dependencies: []
-  name:
-    en: Apogy
-    fr: Apogy
+releases: 
+  - name: 
+      en: Apogy
+      fr: Apogy
+    dependencySet: []
