--- a/_data/dependencies/federal/phac-aspc.yaml
+++ b/_data/dependencies/federal/phac-aspc.yaml
@@ -1,124 +1,124 @@
 ---
 adminCode: phac-aspc
-releases:
-- dependencies:
-  - origin: npm
-    type: core
-    values:
-    - '@ant-design/icons'
-    - '@fortawesome/fontawesome-free'
-    - '@fortawesome/fontawesome-svg-core'
-    - '@fortawesome/free-solid-svg-icons'
-    - '@reach/router'
-    - ag-grid-community
-    - ag-grid-react
-    - angular
-    - angular-aside
-    - angular-bootstrap-lightbox
-    - angular-bootstrap-switch
-    - angular-marked
-    - angular-ui-bootstrap
-    - angular-ui-router
-    - antd
-    - axios
-    - bootstrap
-    - bootstrap-daterangepicker
-    - bootstrap-switch
-    - chroma-js
-    - clipboard
-    - core-js
-    - datatables.net
-    - datatables.net-bs
-    - datatables.net-buttons
-    - datatables.net-buttons-bs
-    - datatables.net-colreorder
-    - datatables.net-colreorder-bs
-    - datatables.net-fixedcolumns
-    - datatables.net-fixedcolumns-bs
-    - datatables.net-scroller
-    - datatables.net-scroller-bs
-    - jquery
-    - jquery-validation
-    - jszip
-    - lodash
-    - lodash.keys
-    - marked
-    - moment
-    - ng-file-upload
-    - phylocanvas
-    - phylocanvas-plugin-export-svg
-    - phylocanvas-plugin-metadata
-    - prop-types
-    - qs
-    - react
-    - react-dom
-    - react-dom-factories
-    - react-markdown
-    - react-mde
-    - react-redux
-    - react-virtualized-auto-sizer
-    - react-window
-    - reactour
-    - redux
-    - redux-saga
-    - regenerator-runtime
-    - select2
-    - showdown
-    - sortablejs
-    - styled-components
-    - ui-select
-    - xlsx
-  - origin: npm
-    type: dev
-    values:
-    - '@babel/core'
-    - '@babel/plugin-proposal-class-properties'
-    - '@babel/plugin-proposal-decorators'
-    - '@babel/plugin-proposal-export-namespace-from'
-    - '@babel/plugin-proposal-function-sent'
-    - '@babel/plugin-proposal-json-strings'
-    - '@babel/plugin-proposal-numeric-separator'
-    - '@babel/plugin-proposal-optional-chaining'
-    - '@babel/plugin-proposal-throw-expressions'
-    - '@babel/plugin-syntax-dynamic-import'
-    - '@babel/plugin-syntax-import-meta'
-    - '@babel/preset-env'
-    - '@babel/preset-react'
-    - autoprefixer
-    - babel-eslint
-    - babel-loader
-    - babel-plugin-import
-    - bootstrap-sass
-    - bower
-    - chromedriver
-    - clean-webpack-plugin
-    - css-loader
-    - cssnano
-    - eslint
-    - eslint-config-prettier
-    - eslint-loader
-    - eslint-plugin-import
-    - eslint-plugin-jsx-a11y
-    - eslint-plugin-prettier
-    - eslint-plugin-react
-    - eslint-plugin-react-hooks
-    - expose-loader
-    - file-loader
-    - mini-css-extract-plugin
-    - node-sass
-    - optimize-css-assets-webpack-plugin
-    - postcss-loader
-    - prettier
-    - resolve-url-loader
-    - sass-loader
-    - source-map-loader
-    - style-loader
-    - terser-webpack-plugin
-    - url-loader
-    - webpack
-    - webpack-cli
-    - webpack-dev-server
-    - webpack-merge
-  name:
-    en: Integrated Rapid Infectious Disease Analysis (IRIDA)
-    fr: Integrated Rapid Infectious Disease Analysis (IRIDA)
+releases: 
+  - name: 
+      en: Integrated Rapid Infectious Disease Analysis (IRIDA)
+      fr: Integrated Rapid Infectious Disease Analysis (IRIDA)
+    dependencySet: 
+      - origin: npm
+        type: core
+        dependencies: 
+          - '@ant-design/icons'
+          - '@fortawesome/fontawesome-free'
+          - '@fortawesome/fontawesome-svg-core'
+          - '@fortawesome/free-solid-svg-icons'
+          - '@reach/router'
+          - ag-grid-community
+          - ag-grid-react
+          - angular
+          - angular-aside
+          - angular-bootstrap-lightbox
+          - angular-bootstrap-switch
+          - angular-marked
+          - angular-ui-bootstrap
+          - angular-ui-router
+          - antd
+          - axios
+          - bootstrap
+          - bootstrap-daterangepicker
+          - bootstrap-switch
+          - chroma-js
+          - clipboard
+          - core-js
+          - datatables.net
+          - datatables.net-bs
+          - datatables.net-buttons
+          - datatables.net-buttons-bs
+          - datatables.net-colreorder
+          - datatables.net-colreorder-bs
+          - datatables.net-fixedcolumns
+          - datatables.net-fixedcolumns-bs
+          - datatables.net-scroller
+          - datatables.net-scroller-bs
+          - jquery
+          - jquery-validation
+          - jszip
+          - lodash
+          - lodash.keys
+          - marked
+          - moment
+          - ng-file-upload
+          - phylocanvas
+          - phylocanvas-plugin-export-svg
+          - phylocanvas-plugin-metadata
+          - prop-types
+          - qs
+          - react
+          - react-dom
+          - react-dom-factories
+          - react-markdown
+          - react-mde
+          - react-redux
+          - react-virtualized-auto-sizer
+          - react-window
+          - reactour
+          - redux
+          - redux-saga
+          - regenerator-runtime
+          - select2
+          - showdown
+          - sortablejs
+          - styled-components
+          - ui-select
+          - xlsx
+      - origin: npm
+        type: dev
+        dependencies: 
+          - '@babel/core'
+          - '@babel/plugin-proposal-class-properties'
+          - '@babel/plugin-proposal-decorators'
+          - '@babel/plugin-proposal-export-namespace-from'
+          - '@babel/plugin-proposal-function-sent'
+          - '@babel/plugin-proposal-json-strings'
+          - '@babel/plugin-proposal-numeric-separator'
+          - '@babel/plugin-proposal-optional-chaining'
+          - '@babel/plugin-proposal-throw-expressions'
+          - '@babel/plugin-syntax-dynamic-import'
+          - '@babel/plugin-syntax-import-meta'
+          - '@babel/preset-env'
+          - '@babel/preset-react'
+          - autoprefixer
+          - babel-eslint
+          - babel-loader
+          - babel-plugin-import
+          - bootstrap-sass
+          - bower
+          - chromedriver
+          - clean-webpack-plugin
+          - css-loader
+          - cssnano
+          - eslint
+          - eslint-config-prettier
+          - eslint-loader
+          - eslint-plugin-import
+          - eslint-plugin-jsx-a11y
+          - eslint-plugin-prettier
+          - eslint-plugin-react
+          - eslint-plugin-react-hooks
+          - expose-loader
+          - file-loader
+          - mini-css-extract-plugin
+          - node-sass
+          - optimize-css-assets-webpack-plugin
+          - postcss-loader
+          - prettier
+          - resolve-url-loader
+          - sass-loader
+          - source-map-loader
+          - style-loader
+          - terser-webpack-plugin
+          - url-loader
+          - webpack
+          - webpack-cli
+          - webpack-dev-server
+          - webpack-merge
