--- a/_data/dependencies/municipal/city-of-sault-ste-marie-on.yaml
+++ b/_data/dependencies/municipal/city-of-sault-ste-marie-on.yaml
@@ -1,281 +1,281 @@
 ---
 adminCode: city-of-sault-ste-marie-on
-releases:
-- dependencies: []
-  name:
-    en: mpacParser
-    fr: mpacParser
-- dependencies:
-  - origin: npm
-    type: core
-    values:
-    - '@fortawesome/fontawesome-free'
-    - '@types/bcrypt'
-    - '@types/better-sqlite3'
-    - '@types/body-parser'
-    - '@types/compression'
-    - '@types/connect'
-    - '@types/cookie-parser'
-    - '@types/ejs'
-    - '@types/express'
-    - '@types/express-serve-static-core'
-    - '@types/express-session'
-    - '@types/html-pdf'
-    - '@types/http-errors'
-    - '@types/integer'
-    - '@types/marked'
-    - '@types/mime'
-    - '@types/morgan'
-    - '@types/node'
-    - '@types/range-parser'
-    - '@types/serve-static'
-    - abbrev
-    - accepts
-    - ajv
-    - ansi-regex
-    - aproba
-    - are-we-there-yet
-    - array-flatten
-    - asn1
-    - assert-plus
-    - asynckit
-    - aws-sign2
-    - aws4
-    - balanced-match
-    - base64-js
-    - basic-auth
-    - bcrypt
-    - bcrypt-pbkdf
-    - better-sqlite3
-    - bindings
-    - bl
-    - body-parser
-    - brace-expansion
-    - buffer
-    - buffer-from
-    - bulma
-    - bulma-divider
-    - bulma-helpers
-    - bulma-switch
-    - bulma-tooltip
-    - bytes
-    - caseless
-    - chownr
-    - code-point-at
-    - combined-stream
-    - compressible
-    - compression
-    - concat-map
-    - concat-stream
-    - connect-sqlite3
-    - console-control-strings
-    - content-disposition
-    - content-type
-    - convert-array-to-csv
-    - cookie
-    - cookie-parser
-    - cookie-signature
-    - core-util-is
-    - dashdash
-    - debug
-    - decompress-response
-    - deep-extend
-    - delayed-stream
-    - delegates
-    - depd
-    - destroy
-    - detect-libc
-    - ecc-jsbn
-    - ee-first
-    - ejs
-    - encodeurl
-    - end-of-stream
-    - es6-promise
-    - escape-html
-    - etag
-    - expand-template
-    - express
-    - express-session
-    - extend
-    - extract-zip
-    - extsprintf
-    - fast-deep-equal
-    - fast-json-stable-stringify
-    - fd-slicer
-    - file-uri-to-path
-    - finalhandler
-    - forever-agent
-    - form-data
-    - forwarded
-    - fresh
-    - fresh-password
-    - fs-constants
-    - fs-extra
-    - fs-minipass
-    - fs.realpath
-    - gauge
-    - getpass
-    - github-from-package
-    - github-markdown-css
-    - glob
-    - graceful-fs
-    - har-schema
-    - har-validator
-    - has-unicode
-    - hasha
-    - html-pdf
-    - http-errors
-    - http-signature
-    - iconv-lite
-    - ieee754
-    - ignore-walk
-    - inflight
-    - inherits
-    - ini
-    - integer
-    - ipaddr.js
-    - is-fullwidth-code-point
-    - is-stream
-    - is-typedarray
-    - isarray
-    - isexe
-    - isstream
-    - jsbn
-    - json-schema
-    - json-schema-traverse
-    - json-stringify-safe
-    - jsonfile
-    - jsprim
-    - kew
-    - klaw
-    - marked
-    - media-typer
-    - merge-descriptors
-    - methods
-    - mime
-    - mime-db
-    - mime-types
-    - mimic-response
-    - minimatch
-    - minimist
-    - minipass
-    - minizlib
-    - mkdirp
-    - mkdirp-classic
-    - morgan
-    - ms
-    - nan
-    - napi-build-utils
-    - needle
-    - negotiator
-    - node-abi
-    - node-addon-api
-    - node-pre-gyp
-    - noop-logger
-    - nopt
-    - npm-bundled
-    - npm-packlist
-    - npmlog
-    - number-is-nan
-    - oauth-sign
-    - object-assign
-    - on-finished
-    - on-headers
-    - once
-    - os-homedir
-    - os-tmpdir
-    - osenv
-    - parseurl
-    - path-is-absolute
-    - path-to-regexp
-    - pend
-    - performance-now
-    - phantomjs-prebuilt
-    - pinkie
-    - pinkie-promise
-    - prebuild-install
-    - process-nextick-args
-    - progress
-    - proxy-addr
-    - psl
-    - pump
-    - punycode
-    - qs
-    - random-bytes
-    - range-parser
-    - raw-body
-    - rc
-    - readable-stream
-    - request
-    - request-progress
-    - rimraf
-    - safe-buffer
-    - safer-buffer
-    - sax
-    - semver
-    - send
-    - serve-static
-    - set-blocking
-    - setprototypeof
-    - signal-exit
-    - simple-concat
-    - simple-get
-    - sqlite3
-    - sshpk
-    - statuses
-    - string-width
-    - string_decoder
-    - strip-ansi
-    - strip-json-comments
-    - tar
-    - tar-fs
-    - tar-stream
-    - throttleit
-    - toidentifier
-    - tough-cookie
-    - tunnel-agent
-    - tweetnacl
-    - type-is
-    - typedarray
-    - uid-safe
-    - unpipe
-    - uri-js
-    - util-deprecate
-    - utils-merge
-    - uuid
-    - vary
-    - verror
-    - which
-    - which-pm-runs
-    - wide-align
-    - wrappy
-    - yallist
-    - yauzl
-  - origin: npm
-    type: dev
-    values:
-    - '@types/bcrypt'
-    - '@types/better-sqlite3'
-    - '@types/compression'
-    - '@types/cookie-parser'
-    - '@types/ejs'
-    - '@types/express'
-    - '@types/express-serve-static-core'
-    - '@types/express-session'
-    - '@types/html-pdf'
-    - '@types/http-errors'
-    - '@types/marked'
-    - '@types/morgan'
-    - bulma
-    - bulma-divider
-    - bulma-helpers
-    - bulma-switch
-    - bulma-tooltip
-    - github-markdown-css
-  name:
-    en: lottery-licence-manager
-    fr: lottery-licence-manager
-- dependencies: []
-  name:
-    en: pdfFlattener
-    fr: pdfFlattener
+releases: 
+  - name: 
+      en: mpacParser
+      fr: mpacParser
+    dependencySet: []
+  - name: 
+      en: lottery-licence-manager
+      fr: lottery-licence-manager
+    dependencySet: 
+      - origin: npm
+        type: core
+        dependencies: 
+          - '@fortawesome/fontawesome-free'
+          - '@types/bcrypt'
+          - '@types/better-sqlite3'
+          - '@types/body-parser'
+          - '@types/compression'
+          - '@types/connect'
+          - '@types/cookie-parser'
+          - '@types/ejs'
+          - '@types/express'
+          - '@types/express-serve-static-core'
+          - '@types/express-session'
+          - '@types/html-pdf'
+          - '@types/http-errors'
+          - '@types/integer'
+          - '@types/marked'
+          - '@types/mime'
+          - '@types/morgan'
+          - '@types/node'
+          - '@types/range-parser'
+          - '@types/serve-static'
+          - abbrev
+          - accepts
+          - ajv
+          - ansi-regex
+          - aproba
+          - are-we-there-yet
+          - array-flatten
+          - asn1
+          - assert-plus
+          - asynckit
+          - aws-sign2
+          - aws4
+          - balanced-match
+          - base64-js
+          - basic-auth
+          - bcrypt
+          - bcrypt-pbkdf
+          - better-sqlite3
+          - bindings
+          - bl
+          - body-parser
+          - brace-expansion
+          - buffer
+          - buffer-from
+          - bulma
+          - bulma-divider
+          - bulma-helpers
+          - bulma-switch
+          - bulma-tooltip
+          - bytes
+          - caseless
+          - chownr
+          - code-point-at
+          - combined-stream
+          - compressible
+          - compression
+          - concat-map
+          - concat-stream
+          - connect-sqlite3
+          - console-control-strings
+          - content-disposition
+          - content-type
+          - convert-array-to-csv
+          - cookie
+          - cookie-parser
+          - cookie-signature
+          - core-util-is
+          - dashdash
+          - debug
+          - decompress-response
+          - deep-extend
+          - delayed-stream
+          - delegates
+          - depd
+          - destroy
+          - detect-libc
+          - ecc-jsbn
+          - ee-first
+          - ejs
+          - encodeurl
+          - end-of-stream
+          - es6-promise
+          - escape-html
+          - etag
+          - expand-template
+          - express
+          - express-session
+          - extend
+          - extract-zip
+          - extsprintf
+          - fast-deep-equal
+          - fast-json-stable-stringify
+          - fd-slicer
+          - file-uri-to-path
+          - finalhandler
+          - forever-agent
+          - form-data
+          - forwarded
+          - fresh
+          - fresh-password
+          - fs-constants
+          - fs-extra
+          - fs-minipass
+          - fs.realpath
+          - gauge
+          - getpass
+          - github-from-package
+          - github-markdown-css
+          - glob
+          - graceful-fs
+          - har-schema
+          - har-validator
+          - has-unicode
+          - hasha
+          - html-pdf
+          - http-errors
+          - http-signature
+          - iconv-lite
+          - ieee754
+          - ignore-walk
+          - inflight
+          - inherits
+          - ini
+          - integer
+          - ipaddr.js
+          - is-fullwidth-code-point
+          - is-stream
+          - is-typedarray
+          - isarray
+          - isexe
+          - isstream
+          - jsbn
+          - json-schema
+          - json-schema-traverse
+          - json-stringify-safe
+          - jsonfile
+          - jsprim
+          - kew
+          - klaw
+          - marked
+          - media-typer
+          - merge-descriptors
+          - methods
+          - mime
+          - mime-db
+          - mime-types
+          - mimic-response
+          - minimatch
+          - minimist
+          - minipass
+          - minizlib
+          - mkdirp
+          - mkdirp-classic
+          - morgan
+          - ms
+          - nan
+          - napi-build-utils
+          - needle
+          - negotiator
+          - node-abi
+          - node-addon-api
+          - node-pre-gyp
+          - noop-logger
+          - nopt
+          - npm-bundled
+          - npm-packlist
+          - npmlog
+          - number-is-nan
+          - oauth-sign
+          - object-assign
+          - on-finished
+          - on-headers
+          - once
+          - os-homedir
+          - os-tmpdir
+          - osenv
+          - parseurl
+          - path-is-absolute
+          - path-to-regexp
+          - pend
+          - performance-now
+          - phantomjs-prebuilt
+          - pinkie
+          - pinkie-promise
+          - prebuild-install
+          - process-nextick-args
+          - progress
+          - proxy-addr
+          - psl
+          - pump
+          - punycode
+          - qs
+          - random-bytes
+          - range-parser
+          - raw-body
+          - rc
+          - readable-stream
+          - request
+          - request-progress
+          - rimraf
+          - safe-buffer
+          - safer-buffer
+          - sax
+          - semver
+          - send
+          - serve-static
+          - set-blocking
+          - setprototypeof
+          - signal-exit
+          - simple-concat
+          - simple-get
+          - sqlite3
+          - sshpk
+          - statuses
+          - string-width
+          - string_decoder
+          - strip-ansi
+          - strip-json-comments
+          - tar
+          - tar-fs
+          - tar-stream
+          - throttleit
+          - toidentifier
+          - tough-cookie
+          - tunnel-agent
+          - tweetnacl
+          - type-is
+          - typedarray
+          - uid-safe
+          - unpipe
+          - uri-js
+          - util-deprecate
+          - utils-merge
+          - uuid
+          - vary
+          - verror
+          - which
+          - which-pm-runs
+          - wide-align
+          - wrappy
+          - yallist
+          - yauzl
+      - origin: npm
+        type: dev
+        dependencies: 
+          - '@types/bcrypt'
+          - '@types/better-sqlite3'
+          - '@types/compression'
+          - '@types/cookie-parser'
+          - '@types/ejs'
+          - '@types/express'
+          - '@types/express-serve-static-core'
+          - '@types/express-session'
+          - '@types/html-pdf'
+          - '@types/http-errors'
+          - '@types/marked'
+          - '@types/morgan'
+          - bulma
+          - bulma-divider
+          - bulma-helpers
+          - bulma-switch
+          - bulma-tooltip
+          - github-markdown-css
+  - name: 
+      en: pdfFlattener
+      fr: pdfFlattener
+    dependencySet: []
