--- a/_data/dependencies/federal/cse-cst.yaml
+++ b/_data/dependencies/federal/cse-cst.yaml
@@ -1,11 +1,11 @@
 ---
 adminCode: cse-cst
-releases:
-- dependencies: []
-  name:
-    en: Spartacus
-    fr: Spartacus
-- dependencies: []
-  name:
-    en: Assemblyline
-    fr: Assemblyline
+releases: 
+  - name: 
+      en: Spartacus
+      fr: Spartacus
+    dependencySet: []
+  - name: 
+      en: Assemblyline
+      fr: Assemblyline
+    dependencySet: []
