--- a/_data/dependencies/provincial/ab.yaml
+++ b/_data/dependencies/provincial/ab.yaml
@@ -1,15 +1,15 @@
 ---
 adminCode: ab
-releases:
-- dependencies: []
-  name:
-    en: ckanext-ab_scheming
-    fr: ckanext-ab_scheming
-- dependencies: []
-  name:
-    en: ckanext-open_alberta
-    fr: ckanext-open_alberta
-- dependencies: []
-  name:
-    en: ckanext-geomapviewer
-    fr: ckanext-geomapviewer
+releases: 
+  - name: 
+      en: ckanext-ab_scheming
+      fr: ckanext-ab_scheming
+    dependencySet: []
+  - name: 
+      en: ckanext-open_alberta
+      fr: ckanext-open_alberta
+    dependencySet: []
+  - name: 
+      en: ckanext-geomapviewer
+      fr: ckanext-geomapviewer
+    dependencySet: []
