--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ prbot_url: "https://canada-pr-bot.herokuapp.com/"
 wet_cdts_hosturl: "https://www.canada.ca/etc/designs/canada/cdts/gcweb"
 wet_cdts_version: "v4_0_30"
 
+active_emergency: true
+active_emergency_name: "COVID-19"
+
+data_tag: "Dataset"
+
 # Build settings
 markdown: kramdown
 include: ["_pages", "_json"]
