Get password through env variable defined from git secret

--- a/.github/workflows/updateContacts.yml
+++ b/.github/workflows/updateContacts.yml
@@ -10,4 +10,8 @@ jobs:
 
     steps:
     - name: Contact Email Update
+      env:
+        ##Insert address here
+        GMAIL_ADDRESS: 
+        GMAIL_APP_PASSWORD: ${{ secrets.GmailAppPassword }}
       run: ./assets/py/emailUpdateScript.py
