--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -50,8 +50,10 @@ administrations:
       metadataLastUpdated: '2019-12-09'
     references:
       - URL:
-          en: 'https://www.bac-lac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx'
-          fr: 'https://www.bac-lac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx'
+          en: >-
+            https://www.bac-lac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+          fr: >-
+            https://www.bac-lac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx
         name:
           en: >-
             Guidelines on File Formats for Transferring Information Resources of
@@ -60,3 +62,19 @@ administrations:
             Lignes directrices sur les formats de fichier à utiliser pour
             transférer des ressources documentaires
     status: preferred
+  - adminCode: city-of-montreal-qc
+    contact:
+      email: t@montreal.ca
+    date:
+      created: '2020-04-22'
+      metadataLastUpdated: '2020-04-22'
+    references:
+      - URL:
+          en: >-
+            https://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+          fr: >-
+            https://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+        name:
+          en: t
+          fr: t
+    status: deprecated
