--- a/_data/administrations/municipal.yml
+++ b/_data/administrations/municipal.yml
@@ -9,17 +9,22 @@
   name:
     en: City of Ottawa
     fr: Ville d'Ottawa
-  email_suffix:
+  email_suffix: null
   provinceCode: 'on'
 - code: city-of-edmonton-ab
   name:
     en: City of Edmonton
     fr: Ville d'Edmonton
-  email_suffix:
+  email_suffix: null
   provinceCode: ab
 - code: city-of-sault-ste-marie-on
   name:
     en: City of Sault Ste Marie
     fr: Ville de Sault Sainte Marie
-  email_suffix:
+  email_suffix: null
+  provinceCode: 'on'
+- code: toronto-on
+  name:
+    en: Toronto
+    fr: Toronto
   provinceCode: 'on'
