--- a/.github/workflows/updateContacts.yml
+++ b/.github/workflows/updateContacts.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
     - name: Contact Email Update
       env:
-        ##Insert address here
-        GMAIL_ADDRESS: 
+        GMAIL_ADDRESS: ${{ secrets.GmailAddress }}
         GMAIL_APP_PASSWORD: ${{ secrets.GmailAppPassword }}
       run: ./assets/py/emailUpdateScript.py
