--- a/.github/workflows/updateContacts.yml
+++ b/.github/workflows/updateContacts.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout Main repo
+      uses: actions/checkout@v2
+      
     - name: Contact Email Update
       env:
         GMAIL_ADDRESS: ${{ secrets.GmailAddress }}
