--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout Main repo
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.PUSH_API_TOKEN }}
 
     - name: Dependencies parser
       run: ./assets/py/dependenciesParser.py
