--- a/.github/workflows/updateContacts.yml
+++ b/.github/workflows/updateContacts.yml
@@ -14,6 +14,6 @@ jobs:
       
     - name: Contact Email Update
       env:
-        GMAIL_ADDRESS: ${{ secrets.GmailAddress }}
-        GMAIL_APP_PASSWORD: ${{ secrets.GmailAppPassword }}
+        API_KEY: ${{ secrets.NotifyAPIKey }}
+        TEMPLATE_ID: ""
       run: ./assets/py/emailUpdateScript.py
