Added to the CI build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,10 @@ jobs:
 
     - name: Run HTML5 Validator
       run: html5validator --root _site/
+    
+    - name: Serve with jekyll
+      run: bundle exec jekyll serve
+
+    - name: Cypress
+      run: npm run cypress
       
