chore: Don't build dependabot branches
They're already built as they create PRs

--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -8,6 +8,8 @@ on:
       - ".licensee.json"
       - "assets/js/src/"
       - ".github/workflows/lint-js.yml"
+    branches-ignore:
+      - "dependabot/**"
   pull_request:
     paths:
       - "package*.json"
