--- a/.github/workflows/lint-yml.yml
+++ b/.github/workflows/lint-yml.yml
@@ -8,6 +8,8 @@ on:
       - "_data/**/*.yml"
       - "_data/**/*.yaml"
       - ".github/workflows/lint-yml.yml"
+    branches-ignore:
+      - "dependabot/**"
   pull_request:
     paths:
       - "requirements.txt"
