--- a/.github/workflows/sync-french.yml
+++ b/.github/workflows/sync-french.yml
@@ -12,6 +12,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'canada-ca'
 
     steps:
     - name: Checkout Main repo
