chore: Allow changes to Action to trigger

--- a/.github/workflows/sync-french.yml
+++ b/.github/workflows/sync-french.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - "CNAME"
-      - ".github/**"
+    paths:
+      - "!CNAME"
+      - "!.github/**"
+      - ".github/workflows/sync-french.yml"
 
 jobs:
   build:
