--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -3,6 +3,9 @@
 
 extends: default
 
+ignore: |
+  node_modules/
+
 rules:
   # 80 chars should be enough, but don't fail if a line is longer
   line-length:
