chore: Move dependency script out of assets
Shouldn't be served through website

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -9,7 +9,7 @@ on:
       - "master"
     paths:
       - ".github/workflows/dependencies.yml"
-      - "assets/py/dependenciesParser.py"
+      - ".github/workflows/dependenciesParser.py"
 
 jobs:
   build:
