fix: Dependency CI path
Something got dropped during rebase for PR

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -23,7 +23,7 @@ jobs:
           token: ${{ secrets.PUSH_API_TOKEN }}
 
       - name: Dependencies parser
-        run: ./assets/py/dependenciesParser.py
+        run: ./.github/workflows/dependenciesParser.py
 
       - name: Commit changes
         run: |
