--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
-
-      - name: Install Ruby dependencies
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+        uses: ruby/setup-ruby@v1.62.0
+        with:
+          bundler-cache: true
 
       - name: Build with Jekyll
         run: bundle exec jekyll build
