chore: Run htmlproofer from bundler

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: bundle exec jekyll build
 
       - name: Run HTMLProofer
-        run: htmlproofer --disable-external --allow-hash-href ./_site
+        run: bundle exec htmlproofer --disable-external --allow-hash-href ./_site
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
