--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
+        with:
+          cache: npm
 
       - name: Install NPM dependencies
         run: npm ci
