--- a/.github/workflows/lint-js.yml
+++ b/.github/workflows/lint-js.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: npm
 
       - name: Install Node dependencies
         run: npm ci
