fix: schema validation

--- a/_data/code/federal/dnd-mdn.yml
+++ b/_data/code/federal/dnd-mdn.yml
@@ -271,6 +271,7 @@ releases:
           fr: 'https://gdal.org/license.html'
         name:
           en: GDAL License
+          fr: GDAL License
     status: Alpha
     team:
       en: DRDC ORC
