--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: bundle exec jekyll build
 
       - name: Run HTMLProofer
-        run: bundle exec htmlproofer --disable-external --allow-hash-href ./_site
+        run: bundle exec htmlproofer --enforce-https false --disable-external --allow-hash-href ./_site
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
