--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.10.0",
     "cypress": "^13.14.2",
     "eslint": "^9.10.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "globals": "^15.9.0",
     "licensee": "^11.1.0",
     "markdownlint-cli2": "^0.14.0",
