ci: re-enable Cypress job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run HTML5 Validator
         run: npm run lint:html
 
-      # - name: Run Cypress tests
-      #   run: |
-      #     bundle exec jekyll serve --detach
-      #     npm run cypress:run
+      - name: Run Cypress tests
+        run: |
+          bundle exec jekyll serve --detach
+          npm run cypress:run
